Dark mode: fixed switcher button

--- a/sidebar/templates/sidebar.styl
+++ b/sidebar/templates/sidebar.styl
@@ -91,7 +91,7 @@
   & .map
     text-align center
     line-height 44px
-    top 80px
+    top 132px
     transition transform animation_duration animation_duration
 
   & &__toggle:active
